fix style on mobile

--- a/xt-client/styles/globals.scss
+++ b/xt-client/styles/globals.scss
@@ -69,6 +69,5 @@ input[type='number'] {
 }
 
 .carousel-inner {
-  overflow: unset !important;
   padding: 0px 4%;
 }
